--- a/index.html
+++ b/index.html
@@ -116,11 +116,23 @@
                         <i class="fas fa-search fs-5 px-3 pt-2"></i>
                       </li>
                 </ul>
-
               </div>
             </div>
           </nav>
     </header>
+
+    <main>
+        <section id="jumbotron">
+            <div class="container-fluid ms-0">
+                <div class="row">
+                    <div class="col-6">
+
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </main>
     
 </body>
 </html>
