--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                       </li>
 
                       <li class="nav-item">
-                        <button type="button" class="btn btn-secondary rounded-pill">Accedi</button>
+                        <button type="button" class="btn btn-secondary">Accedi</button>
                       </li>
                       <li class="nav-item">
                         <i class="fas fa-search fs-5 px-3 pt-2"></i>
@@ -122,16 +122,58 @@
     </header>
 
     <main>
-        <section id="jumbotron">
-            <div class="container-fluid ms-0">
+        <section id="main-jumbo" class="my_jumbotron">
+            <div class="container px-2">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-4">
+                        <img class="mb-4 my_jumbo-logo" src="img/returnal-hero-banner-logo.png" alt="">
+                        <h2 class="mb-4">Rompi il cerchio</h2>
+                        <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores velit consequuntur ratione in! Veniam, voluptatem sint provident quam asperiores totam, quae vel labore odio accusamus incidunt itaque aliquid ullam eaque!</p>
+                        <a class="btn btn-secondary my_buy-btn" href="#">Acquista ora</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <section id="my_carousel" >
+            <div class="container">
+                <div class="row mb-3">
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2 px-none-0">
+                        <div class="my_carousel-img mb-3"> 
+                            <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        </div>               
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2 ">
+                        <div class="my_carousel-img">
+                            <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                        </div>               
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2 ">
+                        <div class="my_carousel-img">
+                            <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        </div>               
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2 ">
+                        <div class="my_carousel-img">
+                            <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                        </div>               
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2 ">
+                        <div class="my_carousel-img">
+                            <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        </div>               
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2 ">
+                        <div class="my_carousel-img">
+                            <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                        </div>               
                     </div>
                 </div>
             </div>
 
         </section>
+
+
     </main>
     
 </body>
