block item console

--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
             </div>
         </section>
 
-        <section id="my_carousel" >
+        <section id="carousel">
             <div class="container">
                 <div class="row mb-3">
-                    <div class="col-6 col-sm-4 col-md-4 col-lg-2 px-none-0">
-                        <div class="my_carousel-img mb-3"> 
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2">
+                        <div class="my_carousel-img"> 
                             <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
                         </div>               
                     </div>
@@ -170,9 +170,41 @@
                     </div>
                 </div>
             </div>
-
         </section>
 
+        <section id="console-head">
+            <div class="container px-1">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
+                        <span>PLAY HAS NO LIMITS</span>
+                        <h1>Ecco la PlayStation 5</h1>
+                        <p class="my_caption-gray">
+                            Tuffati in nuove possibilità di gioco completamente insaspettate
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="item-selected" class="my_container-item">
+            <div class="container">
+                <div class="row pt-5">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6 d-flex align-items-center">
+                        <div class="item-caption">
+                            <h2>Console PlayStation 5</h2>
+                            <p class="my_caption-gray">
+                                Sperimenta la nuova generazione di incredibili giochi PlayStation
+                            </p>
+                            <a class="btn btn-primary" type="button" href="#">Maggiori informazioni</a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                        <img src="img/playstation-5-thumb.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+        </section>
 
     </main>
     
