--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     <main>
         <section id="main-jumbo" class="my_jumbotron">
-            <div class="container px-2">
+            <div class="container-fluid gx-5">
                 <div class="row">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-4">
                         <img class="mb-4 my_jumbo-logo" src="img/returnal-hero-banner-logo.png" alt="">
@@ -136,7 +136,7 @@
         </section>
 
         <section id="carousel">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row mb-3">
                     <div class="col-6 col-sm-4 col-md-4 col-lg-2">
                         <div class="my_carousel-img"> 
@@ -173,7 +173,7 @@
         </section>
 
         <section id="console-head">
-            <div class="container px-1">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
                         <span>PLAY HAS NO LIMITS</span>
@@ -187,19 +187,39 @@
         </section>
 
         <section id="item-selected" class="my_container-item">
-            <div class="container">
-                <div class="row pt-5">
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6 d-flex align-items-center">
-                        <div class="item-caption">
+            <div class="container-fluid gx-4">
+                <div class="row align-items-center pt-5">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">         
                             <h2>Console PlayStation 5</h2>
                             <p class="my_caption-gray">
                                 Sperimenta la nuova generazione di incredibili giochi PlayStation
                             </p>
-                            <a class="btn btn-primary" type="button" href="#">Maggiori informazioni</a>
-                        </div>
+                            <a class="btn btn-primary" type="button" href="#">Maggiori informazioni</a>       
                     </div>
                     <div class="col-12 col-sm-12 col-md-6 col-lg-6">
                         <img src="img/playstation-5-thumb.png" alt="">
+                    </div>
+                </div>
+                <div class="row justify-content-evenly text-center">
+                    <div class="col-4 col-sm-4 col-md-2 col-lg-2 my_item-console">
+                        <img src="img/playstation-5-thumb.png" alt="">
+                        <span>Console PS5</span>
+                    </div>
+                    <div class="col-4 col-sm-4 col-md-2 col-lg-2 my_item-console">
+                        <img src="img/joypad-thumb.png" alt="">
+                        <span>Controller wireless DualSense</span>
+                    </div>
+                    <div class="col-4 col-sm-4 col-md-2 col-lg-2 my_item-console">
+                        <img src="img/headset-thumb.png" alt="">
+                        <span>Cuffie wireless con microfono PULSE 3</span>
+                    </div>
+                    <div class="col-4 col-sm-4 col-md-2 col-lg-2 my_item-console">
+                        <img src="img/remote-thumb.png" alt="">
+                        <span>Telecomando Media</span>
+                    </div>
+                    <div class="col-4 col-sm-4 col-md-2 col-lg-2 my_item-console">
+                        <img src="img/camera-thumb.jpg" alt="">
+                        <span>Telecamera HD</span>
                     </div>
                 </div>
             </div>
