--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </header>
 
     <main>
-        <section id="main-jumbo" class="my_jumbotron">
+        <section id="head-jumbo" class="my_jumbotron">
             <div class="container-fluid gx-5">
                 <div class="row">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-4">
@@ -223,7 +223,19 @@
                     </div>
                 </div>
             </div>
+        </section>
 
+        <section id="center-jumbo" class="my_jumbotron">
+            <div class="container-fluid gx-5">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-4">
+                        <img class="mb-4 my_jumbo-logo" src="img/it-takes-two-logo.png" alt="">
+                        <h2 class="mb-4">Un'avventura cooperativa selvaggia ti attende</h2>
+                        <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores velit consequuntur ratione in! Veniam, voluptatem sint provident quam asperiores totam, quae vel labore odio accusamus incidunt itaque aliquid ullam eaque!</p>
+                        <a class="btn btn-secondary my_buy-btn" href="#">Acquista ora</a>
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
