--- a/index.html
+++ b/index.html
@@ -238,6 +238,64 @@
             </div>
         </section>
 
+        <section id="incoming">
+            <div class="container">
+                <h2 class="pt-5 pb-2">Nuove uscite</h2>
+                <h3 class="pb-3">Giochi incredibili per PS4 e PS5 disponibili ora</h3>
+                <div class="row gy-5">
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2 ">
+                        <img class="my_incoming-item" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <span>Tony Hawk's Pro Skater 1 + 2</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2">
+                        <img class="my_incoming-item" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <span>Tony Hawk's Pro Skater 1 + 2</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2">
+                        <img class="my_incoming-item" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <span>Tony Hawk's Pro Skater 1 + 2</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2">
+                        <img class="my_incoming-item" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <span>Tony Hawk's Pro Skater 1 + 2</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2">
+                        <img class="my_incoming-item" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <span>Tony Hawk's Pro Skater 1 + 2</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2">
+                        <img class="my_incoming-item" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <span>Tony Hawk's Pro Skater 1 + 2</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2">
+                        <img class="my_incoming-item" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <span>Tony Hawk's Pro Skater 1 + 2</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2">
+                        <img class="my_incoming-item" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <span>Tony Hawk's Pro Skater 1 + 2</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2">
+                        <img class="my_incoming-item" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <span>Tony Hawk's Pro Skater 1 + 2</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2">
+                        <img class="my_incoming-item" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <span>Tony Hawk's Pro Skater 1 + 2</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2">
+                        <img class="my_incoming-item" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <span>Tony Hawk's Pro Skater 1 + 2</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2">
+                        <img class="my_incoming-item" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <span>Tony Hawk's Pro Skater 1 + 2</span>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
     </main>
     
 </body>
