--- a/index.html
+++ b/index.html
@@ -238,63 +238,104 @@
             </div>
         </section>
 
-        <section id="incoming">
+        <section id="incoming" class="pb-5">
             <div class="container">
                 <h2 class="pt-5 pb-2">Nuove uscite</h2>
                 <h3 class="pb-3">Giochi incredibili per PS4 e PS5 disponibili ora</h3>
                 <div class="row gy-5">
                     <div class="col-6 col-sm-4 col-md-4 col-lg-2 ">
-                        <img class="my_incoming-item" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <img class="my_incoming-item mb-2" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <span class="">Tony Hawk's Pro Skater 1 + 2</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2">
+                        <img class="my_incoming-item mb-2" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         <span>Tony Hawk's Pro Skater 1 + 2</span>
                     </div>
                     <div class="col-6 col-sm-4 col-md-4 col-lg-2">
-                        <img class="my_incoming-item" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="my_incoming-item mb-2" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                         <span>Tony Hawk's Pro Skater 1 + 2</span>
                     </div>
                     <div class="col-6 col-sm-4 col-md-4 col-lg-2">
-                        <img class="my_incoming-item" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <img class="my_incoming-item mb-2" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         <span>Tony Hawk's Pro Skater 1 + 2</span>
                     </div>
                     <div class="col-6 col-sm-4 col-md-4 col-lg-2">
-                        <img class="my_incoming-item" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="my_incoming-item mb-2" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                         <span>Tony Hawk's Pro Skater 1 + 2</span>
                     </div>
                     <div class="col-6 col-sm-4 col-md-4 col-lg-2">
-                        <img class="my_incoming-item" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <img class="my_incoming-item mb-2" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         <span>Tony Hawk's Pro Skater 1 + 2</span>
                     </div>
                     <div class="col-6 col-sm-4 col-md-4 col-lg-2">
-                        <img class="my_incoming-item" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="my_incoming-item mb-2" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                         <span>Tony Hawk's Pro Skater 1 + 2</span>
                     </div>
                     <div class="col-6 col-sm-4 col-md-4 col-lg-2">
-                        <img class="my_incoming-item" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <img class="my_incoming-item mb-2" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         <span>Tony Hawk's Pro Skater 1 + 2</span>
                     </div>
                     <div class="col-6 col-sm-4 col-md-4 col-lg-2">
-                        <img class="my_incoming-item" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="my_incoming-item mb-2" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                         <span>Tony Hawk's Pro Skater 1 + 2</span>
                     </div>
                     <div class="col-6 col-sm-4 col-md-4 col-lg-2">
-                        <img class="my_incoming-item" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <img class="my_incoming-item mb-2" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         <span>Tony Hawk's Pro Skater 1 + 2</span>
                     </div>
                     <div class="col-6 col-sm-4 col-md-4 col-lg-2">
-                        <img class="my_incoming-item" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="my_incoming-item mb-2" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                         <span>Tony Hawk's Pro Skater 1 + 2</span>
                     </div>
                     <div class="col-6 col-sm-4 col-md-4 col-lg-2">
-                        <img class="my_incoming-item" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
-                        <span>Tony Hawk's Pro Skater 1 + 2</span>
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-4 col-lg-2">
-                        <img class="my_incoming-item" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="my_incoming-item mb-2" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         <span>Tony Hawk's Pro Skater 1 + 2</span>
                     </div>
                 </div>
             </div>
-
         </section>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
+                    <h2>Esplora PlayStation 4</h2>
+                    <p class="my_caption-gray mb-5">
+                        Giochi incredibili e intrattenimento senza fine.
+                        <br> 
+                        Non c'è mai stato un momenot migliore per giocare sulla tua PS4
+                    </p>
+                </div>
+            </div>          
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+                    <img class="my_ps4-item mb" src="img/ps4-slim-homepage-image-block.jpg" alt="">
+                    <h2 class="mb-3">PlayStation 4</h2>
+                    <span class="my_caption-gray">
+                        Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione
+                    </span>
+                    <a class="btn btn-primary mt-3" type="button" href="#">Scopri di più</a>
+                </div> 
+                <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+                    <img class="my_ps4-item" src="img/double11-202010-tw-psvr.jpg" alt="">
+                    <h2 class="mb-3">PlayStation VR</h2>
+                    <span class="my_caption-gray">
+                        Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione
+                    </span>
+                    <a class="btn btn-primary mt-3" type="button" href="#">Scopri di più</a>
+                </div>  
+                <div class="col-12 col-sm-12 col-md-4 col-lg-4">                  
+                    <img class="my_ps4-item" src="img/dualshock-4-listing-thumb.jpg" alt="">
+                    <h2 class="mb-3">Accessori</h2>
+                    <span class="my_caption-gray">
+                        Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione
+                    </span>
+                    <a class="btn btn-primary mt-3" type="button" href="#">Scopri di più</a>
+                </div>              
+            </div>
+        </div>
+
 
     </main>
     
