--- a/index.html
+++ b/index.html
@@ -336,6 +336,22 @@
             </div>
         </div>
 
+        <section id="split-jumbo" class="my_jumbotron">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-7 col-lg-7">
+                        <img class="mb-4 my_jumbo-logo" src="img/ps-plus-logo.png" alt="">
+                        <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores velit consequuntur ratione in! Veniam, voluptatem sint provident quam asperiores totam, quae vel labore odio accusamus incidunt itaque aliquid ullam eaque!</p>
+                        <a class="btn btn-secondary my_buy-btn" href="#">Acquista ora</a>
+                    </div>
+                    <div class="col-0 col-sm-0 col-md-5 col-lg-5">
+                        <img src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
     </main>
     
