--- a/index.html
+++ b/index.html
@@ -336,21 +336,64 @@
             </div>
         </div>
 
-        <section id="split-jumbo" class="my_jumbotron">
+        <section id="ps-plus-jumbo" class="split-jumbo">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-sm-12 col-md-7 col-lg-7">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6 pt-lg-5">
                         <img class="mb-4 my_jumbo-logo" src="img/ps-plus-logo.png" alt="">
-                        <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores velit consequuntur ratione in! Veniam, voluptatem sint provident quam asperiores totam, quae vel labore odio accusamus incidunt itaque aliquid ullam eaque!</p>
-                        <a class="btn btn-secondary my_buy-btn" href="#">Acquista ora</a>
+                        <p>Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
+                        <a class="btn btn-secondary my_explore-btn" href="#">Esplora PlayStation Plus</a>
                     </div>
-                    <div class="col-0 col-sm-0 col-md-5 col-lg-5">
+                    <div class="d-none d-md-block col-md-6 col-lg-6 ">
                         <img src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
 
                     </div>
                 </div>
             </div>
         </section>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
+                    <h2>Nuovi sconti sul PlayStation Store</h2>
+                    <p class="my_caption-gray">
+                        Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-4 col-lg-4 gy-5">
+                    <img class="my_sale-item pb-5" src="img/playstation-store-games-under-20-spotlight.jpg" alt="">      
+                </div>
+                <div class="col-12 col-sm-12 col-md-4 col-lg-4 gy-5">
+                    <img class="my_sale-item pb-5" src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
+                </div>
+                <div class="col-12 col-sm-12 col-md-4 col-lg-4 gy-5">
+                    <img class="my_sale-item pb-5" src="img/playstation-store-free-to-play-spotlight.png" alt="">      
+                </div>              
+            </div>
+        </div>
+
+        <section id="ps-now-jumbo" class="split-jumbo">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6 pt-lg-5">
+                        <img class="mb-4 my_jumbo-logo" src="img/ps-now-logo-two-column.png" alt="">
+                        <p>
+                            Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 o PC Windows, con nuovi titoli aggiunti ogni mese.
+                        </p>
+                        <a class="btn btn-secondary my_explore-btn" href="#">Esplora PlayStation Now</a>
+                    </div>
+                    <div class="d-none d-md-block col-md-6 col-lg-6 ">
+                        <img src="img/ps-now-april-featured-image-block.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
 
 
     </main>
