--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     <span class="my_caption-gray">
                         Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione
                     </span>
-                    <a class="btn btn-primary mt-3" type="button" href="#">Scopri di più</a>
+                    <a class="btn btn-primary mt-3 d-table" type="button" href="#">Scopri di più</a>
                 </div> 
                 <div class="col-12 col-sm-12 col-md-4 col-lg-4">
                     <img class="my_ps4-item" src="img/double11-202010-tw-psvr.jpg" alt="">
@@ -323,7 +323,7 @@
                     <span class="my_caption-gray">
                         Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione
                     </span>
-                    <a class="btn btn-primary mt-3" type="button" href="#">Scopri di più</a>
+                    <a class="btn btn-primary mt-3 d-table" type="button" href="#">Scopri di più</a>
                 </div>  
                 <div class="col-12 col-sm-12 col-md-4 col-lg-4">                  
                     <img class="my_ps4-item" src="img/dualshock-4-listing-thumb.jpg" alt="">
@@ -331,7 +331,7 @@
                     <span class="my_caption-gray">
                         Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione
                     </span>
-                    <a class="btn btn-primary mt-3" type="button" href="#">Scopri di più</a>
+                    <a class="btn btn-primary mt-3 d-table" type="button" href="#">Scopri di più</a>
                 </div>              
             </div>
         </div>
@@ -392,11 +392,31 @@
                 </div>
             </div>
         </section>
-
-
-
-
+        
+        <div class="container ">
+            <div class="row justify-content-center">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
+                    <h2>Seguici sui social media</h2>
+                </div>
+                <div class="col-6 col-sm-3 col-md-2 col-lg-2 gy-5">
+                    <img class="my_social-logo" src="img/twitter.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-3 col-md-2 col-lg-2 gy-5">
+                    <img class="my_social-logo" src="img/facebook.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-3 col-md-2 col-lg-2 gy-5">
+                    <img class="my_social-logo" src="img/instagram.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-3 col-md-2 col-lg-2 gy-5">
+                    <img class="my_social-logo" src="img/youtube.png" alt="">
+                </div>
+            </div>
+        </div>
     </main>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
