--- a/index.html
+++ b/index.html
@@ -415,6 +415,49 @@
     </main>
 
     <footer>
+        <section id="footer-wrapper" class="pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+                        <img class="footer-logo" src="img/ps-footer.svg" alt="">
+                        <div>country / Region: Italy</div>    
+
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+                        <div class="row">
+                            <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+                                <ul>
+                                    <li>link footer n</li>
+                                    <li>link footer n</li>
+                                    <li>link footer n</li>
+                                    <li>link footer n</li>
+                                    <li>link footer n</li>
+                                </ul>                        
+                            </div>
+                            <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+                                <ul>
+                                    <li>link footer n</li> 
+                                    <li>link footer n</li>
+                                    <li>link footer n</li>
+                                    <li>link footer n</li>
+                                    <li>link footer n</li>
+                                    <li>link footer n</li>   
+                                    <li>link footer n</li>                            
+                                </ul>                            
+                            </div>
+                            <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+                                <ul>
+                                    <li>link footer n</li>
+                                    <li>link footer n</li>   
+                                    <li>link footer n</li>                                 
+                                </ul>                        
+                            </div>
+                        </div>                      
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
     </footer>
     
