--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-12 col-md-4 col-lg-4">
-                    <img class="my_ps4-item mb" src="img/ps4-slim-homepage-image-block.jpg" alt="">
+                    <img class="my_ps4-item" src="img/ps4-slim-homepage-image-block.jpg" alt="">
                     <h2 class="mb-3">PlayStation 4</h2>
                     <span class="my_caption-gray">
                         Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione
@@ -352,7 +352,7 @@
             </div>
         </section>
 
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
                     <h2>Nuovi sconti sul PlayStation Store</h2>
@@ -415,41 +415,41 @@
     </main>
 
     <footer>
-        <section id="footer-wrapper" class="pt-5">
+        <section id="footer-wrapper" class="">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-6">
-                        <img class="footer-logo" src="img/ps-footer.svg" alt="">
-                        <div>country / Region: Italy</div>    
+                        <img class="footer-logo w-25" src="img/ps-footer.svg" alt="">
+                        <div class="pt-5"><i class="fas fa-globe"></i> Country / Region: Italy</div>    
 
                     </div>
                     <div class="col-12 col-sm-12 col-md-12 col-lg-6">
                         <div class="row">
                             <div class="col-12 col-sm-12 col-md-4 col-lg-4">
                                 <ul>
-                                    <li>link footer n</li>
-                                    <li>link footer n</li>
-                                    <li>link footer n</li>
-                                    <li>link footer n</li>
-                                    <li>link footer n</li>
+                                    <li><a href="#">link footer n</a></li>
+                                    <li><a href="#">link footer n</a></li>
+                                    <li><a href="#">link footer n</a></li>
+                                    <li><a href="#">link footer n</a></li>
+                                    <li><a href="#">link footer n</a></li>
                                 </ul>                        
                             </div>
                             <div class="col-12 col-sm-12 col-md-4 col-lg-4">
                                 <ul>
-                                    <li>link footer n</li> 
-                                    <li>link footer n</li>
-                                    <li>link footer n</li>
-                                    <li>link footer n</li>
-                                    <li>link footer n</li>
-                                    <li>link footer n</li>   
-                                    <li>link footer n</li>                            
+                                    <li><a href="#">link footer n</a></li>
+                                    <li><a href="#">link footer n</a></li>
+                                    <li><a href="#">link footer n</a></li>
+                                    <li><a href="#">link footer n</a></li>
+                                    <li><a href="#">link footer n</a></li>
+                                    <li><a href="#">link footer n</a></li>
+                                    <li><a href="#">link footer n</a></li>                          
                                 </ul>                            
                             </div>
                             <div class="col-12 col-sm-12 col-md-4 col-lg-4">
                                 <ul>
-                                    <li>link footer n</li>
-                                    <li>link footer n</li>   
-                                    <li>link footer n</li>                                 
+                                    <li><a href="#">link footer n</a></li>
+                                    <li><a href="#">link footer n</a></li>
+                                    <li><a href="#">link footer n</a></li>                                
                                 </ul>                        
                             </div>
                         </div>                      
