--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         <section id="ps-plus-jumbo" class="split-jumbo">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6 pt-lg-5">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6 pt-lg-5 mb-5 mb-md-0">
                         <img class="mb-4 my_jumbo-logo" src="img/ps-plus-logo.png" alt="">
                         <p>Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
                         <a class="btn btn-secondary my_explore-btn" href="#">Esplora PlayStation Plus</a>
@@ -379,7 +379,7 @@
         <section id="ps-now-jumbo" class="split-jumbo">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6 pt-lg-5">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6 pt-lg-5 mb-5 mb-md-0">
                         <img class="mb-4 my_jumbo-logo" src="img/ps-now-logo-two-column.png" alt="">
                         <p>
                             Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 o PC Windows, con nuovi titoli aggiunti ogni mese.
