dropdown menu - js

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     <main>
         <section id="head-jumbo" class="my_jumbotron">
-            <div class="container-fluid gx-5">
+            <div class="container gx-5">
                 <div class="row">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-4">
                         <img class="mb-4 my_jumbo-logo" src="img/returnal-hero-banner-logo.png" alt="">
@@ -136,7 +136,7 @@
         </section>
 
         <section id="carousel">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="row mb-3">
                     <div class="col-6 col-sm-4 col-md-4 col-lg-2">
                         <div class="my_carousel-img"> 
@@ -173,7 +173,7 @@
         </section>
 
         <section id="console-head">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="row">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
                         <span>PLAY HAS NO LIMITS</span>
@@ -187,7 +187,7 @@
         </section>
 
         <section id="item-selected" class="my_container-item">
-            <div class="container-fluid gx-4">
+            <div class="container gx-4">
                 <div class="row align-items-center pt-5">
                     <div class="col-12 col-sm-12 col-md-6 col-lg-6">         
                             <h2>Console PlayStation 5</h2>
@@ -226,7 +226,7 @@
         </section>
 
         <section id="center-jumbo" class="my_jumbotron">
-            <div class="container-fluid gx-5">
+            <div class="container gx-5">
                 <div class="row">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-4">
                         <img class="mb-4 my_jumbo-logo" src="img/it-takes-two-logo.png" alt="">
@@ -295,7 +295,7 @@
             </div>
         </section>
 
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
                     <h2>Esplora PlayStation 4</h2>
@@ -460,6 +460,6 @@
 
 
     </footer>
-    
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>   
 </body>
 </html>
